--- a/index.html
+++ b/index.html
@@ -6,10 +6,26 @@
     <title>Document</title>
 </head>
 <body>
-    <form id="api-search" action='https://www.googleapis.com/books/v1/volumes?q=' method="GET">
+    <form id="api-search">
             <span>Search</span><br>
             <input id="title" type="text" placeholder="Book Title" name="search-metric">
-            <input type="submit" value="Search" name="Search">
+            <input id="search-button" type="button" value="Search" name="Search" onclick="fetchBookData()">
     </form>
 </body>
+<script>
+// Function to fetch book data from Google Books API
+
+  function fetchBookData() {
+            const apiKey = 'AIzaSyAKC5brPzUptgZP1yPB-ABbwq_0GpL3cF0';
+            const searchQuery = document.getElementById('title').value;
+            const apiUrl = `https://www.googleapis.com/books/v1/volumes?q=${searchQuery}&key=${apiKey}`;
+
+ 
+            fetch(apiUrl)
+              .then(response => response.json())
+              .then(data => displayBookData(data.items))
+              .catch(error => console.error('Error fetching data:', error));
+
+  }
+  </script>
 </html>
