Post class June 2nd

--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Book Keeper</title>
 </head>
 <body>
-    This is our dummy site.
+    <h1>Book Keeper</h1>
+    <!-- <div>
+        <h2>Register</h2>
+        <input type="text" id="reg-username" placeholder="Username">
+        <input type="password" id="reg-password" placeholder="Password">
+        <button onclick="handleRegister()">Register</button>
+    </div> -->
+    <div>
+        <h2>Log In</h2>
+        <input type="text" id="login-username" placeholder="Username">
+        <input type="password" id="login-password" placeholder="Password">
+        <button onclick="handleLogin()">Log in</button>
+    </div>
+    <div id="result"></div>
+    <script src="BookKeeper.js"></script>
 </body>
 </html>
