--- a/homepage.html
+++ b/homepage.html
@@ -1,28 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
+
+    <!-- CSS Link -->
+    <link rel="stylesheet" href="style.css" type="text/css"/>
+
+    <!-- Google font -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+    <!-- Viewport -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book Keeper - Home</title>
+
+     <!-- Latest compiled and minified CSS -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+     <!-- Latest compiled JavaScript -->
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> 
+
+     <!-- Load icon library -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+    <title>API Test</title>
 </head>
 <body>
-    <h1>Welcome to Book Keeper</h1>
-    <div id="user-info"></div>
-    <button onclick="logout()">Logout</button>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const username = sessionStorage.getItem('username');
-            if (username) {
-                document.getElementById('user-info').textContent = `Hello, ${username}!`;
-            } else {
-                window.location.href = 'index.html';  // Redirect back to login if no session found
-            }
-        });
+    <!-- Background image -->
+<div class="bg-image"></div>
+<!-- Background image -->
+     <!-- A grey horizontal navbar that becomes vertical on small screens -->
+    <nav class="navbar navbar-expand-sm fixed-top mask-custom">
 
-        function logout() {
-            sessionStorage.removeItem('username');
-            window.location.href = 'index.html';
-        }
-    </script>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">BookKeeper</a>
+        </div>
+
+        <!-- Links -->
+        <div class="container-fluid justify-content-end">
+        
+        <ul class="navbar-nav">
+            <li class="nav-item">
+            <button class="nav-link" >Book Shelf</button>
+            </li>
+            <li class="nav-item">
+            <button class="nav-link" >Recommended</button>
+            </li>
+            <li class="nav-item">
+            <button class="nav-link" >Sign Out</button>
+            </li>
+        </ul>
+        </div>
+    </nav>
+
+    <div class="input-group mb-3 shadow" data-bs-theme="light" id="search-form">
+        <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" id="search-select" aria-expanded="false"><i class="bi bi-list"></i></button>
+        <ul class="dropdown-menu">
+          <li><button class="dropdown-item" onclick=searchSelect(this)>Title</button></li>
+          <li><button class="dropdown-item" onclick=searchSelect(this)>Author</button></li>
+          <li><button class="dropdown-item" onclick=searchSelect(this)>Genre</button></li>
+          <li><button class="dropdown-item" onclick=searchSelect(this)>ISBN</button></li>
+          <li><button class="dropdown-item" onclick=searchSelect(this)>Publisher</button></li>
+        </ul>
+        <input type="text" class="form-control" id="searchInput" aria-label="Text input with dropdown button">
+        <button class="btn btn-light" type="button"><i class="bi bi-search"></i></button>
+    </div>
+     
+
 </body>
+<script src="script.js"></script>
 </html>
