--- a/index.html
+++ b/index.html
@@ -1,25 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
+
+    <!-- CSS Link -->
+    <link rel="stylesheet" href="style.css" type="text/css"/>
+
+    <!-- Google font -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+    <!-- Viewport -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book Keeper</title>
+
+     <!-- Latest compiled and minified CSS -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+     <!-- Latest compiled JavaScript -->
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> 
+        <title>API Test</title>
 </head>
 <body>
-    <h1>Book Keeper</h1>
-    <!-- <div>
-        <h2>Register</h2>
-        <input type="text" id="reg-username" placeholder="Username">
-        <input type="password" id="reg-password" placeholder="Password">
-        <button onclick="handleRegister()">Register</button>
-    </div> -->
-    <div>
-        <h2>Log In</h2>
-        <input type="text" id="login-username" placeholder="Username">
-        <input type="password" id="login-password" placeholder="Password">
-        <button onclick="handleLogin()">Log in</button>
+    <!-- Background image -->
+<div class="bg-image"></div>
+<!-- Background image -->
+     <!-- A grey horizontal navbar that becomes vertical on small screens -->
+    <nav class="navbar navbar-expand-sm fixed-top mask-custom">
+
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">BookKeeper</a>
+        </div>
+    </nav> 
+
+
+    <div class="container-xxl" id="welcome">
+        <span>BookKeeper</span>
+        <br>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#login-modal">Login</button>
+        <br>
+        <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#register-modal">Sign Up</button>
     </div>
-    <div id="result"></div>
-    <script src="BookKeeper.js"></script>
+
+    <!-- Login Modal -->
+<div class="modal fade" id="login-modal">
+    <div class="modal-dialog modal-dialog-centered modal-md">
+      <div class="modal-content" id="login-content">
+        <!-- Modal body -->
+        <div class="modal-body">
+        <button type="button" class="btn-close" id="login-close" data-bs-dismiss="modal"></button>
+          <h3>Login</h3>
+          <div class="form-floating mb-3 mt-3" data-bs-theme="light">
+            <input type="text" class="form-control" id="email" placeholder="Enter email" name="email">
+            <label for="email">Email</label>
+          </div>
+          <div class="form-floating mt-3 mb-3" data-bs-theme="light">
+            <input type="text" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
+            <label for="pwd">Password</label>
+          </div> 
+          <button type="button" class="btn" id="login-login" data-bs-dismiss="modal">Login</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+      <!-- Login Modal -->
+<div class="modal fade" id="register-modal">
+    <div class="modal-dialog modal-dialog-centered modal-md">
+      <div class="modal-content" id="register-content">
+        <!-- Modal body -->
+        <div class="modal-body">
+        <button type="button" class="btn-close" id="login-close" data-bs-dismiss="modal"></button>
+          <h4>Sign Up</h4>
+          <div class="form-floating mb-3 mt-3" data-bs-theme="light">
+            <input type="text" class="form-control" id="email" placeholder="Enter email" name="email">
+            <label for="email">Email</label>
+          </div>
+          <div class="form-floating mt-3 mb-3" data-bs-theme="light">
+            <input type="text" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
+            <label for="pwd">Password</label>
+          </div> 
+          <button type="button" class="btn" id="signup-signup" data-bs-dismiss="modal">Sign Up</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
+<script src="script.js"></script>
 </html>
