--- a/homepage.html
+++ b/homepage.html
@@ -43,13 +43,13 @@
         
         <ul class="navbar-nav">
             <li class="nav-item">
-            <button class="nav-link" >Book Shelf</button>
+            <button class="nav-link" onclick="viewBookShelf()" >Book Shelf</button>
             </li>
             <li class="nav-item">
             <button class="nav-link" >Recommended</button>
             </li>
             <li class="nav-item">
-            <button class="nav-link" >Sign Out</button>
+            <button class="nav-link" onclick="signOut()">Sign Out</button>
             </li>
         </ul>
         </div>
@@ -70,5 +70,5 @@
      
 
 </body>
-<script src="script.js"></script>
+<script src="BookKeeper.js"></script>
 </html>
