--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <label for="email">Email</label>
                     </div>
                     <div class="form-floating mt-3 mb-3" data-bs-theme="light">
-                        <input type="text" class="form-control" id="login-password" placeholder="Enter password" name="pswd">
+                        <input type="password" class="form-control" id="login-password" placeholder="Enter password" name="pswd">
                         <label for="pwd">Password</label>
                     </div> 
                     <button type="button" onclick="handleLogin()" class="btn" id="login-login">Login</button>
@@ -55,7 +55,7 @@
                         <label for="email">Email</label>
                     </div>
                     <div class="form-floating mt-3 mb-3" data-bs-theme="light">
-                        <input type="text" class="form-control" id="reg-password" placeholder="Enter password" name="pswd">
+                        <input type="password" class="form-control" id="reg-password" placeholder="Enter password" name="pswd">
                         <label for="pwd">Password</label>
                     </div> 
                     <button type="button" onclick="handleRegister()" class="btn" id="signup-signup" data-bs-dismiss="modal">Sign Up</button>
