--- a/homepage.html
+++ b/homepage.html
@@ -68,6 +68,18 @@
         <button class="btn btn-light" type="button"><i class="bi bi-search"></i></button>
     </div>
      
+    <ul class="list-group list-group-flush" id="results-list" data-bs-theme="light">
+        <li class="list-group-item">An item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">A fourth item</li>
+        <li class="list-group-item">And a fifth one</li>
+        <li class="list-group-item">An item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">A fourth item</li>
+        <li class="list-group-item">And a fifth one</li>
+      </ul>
 
 </body>
 <script src="script.js"></script>
