Displaying API Call

--- a/homepage.html
+++ b/homepage.html
@@ -65,21 +65,11 @@
           <li><button class="dropdown-item" onclick=searchSelect(this)>Publisher</button></li>
         </ul>
         <input type="text" class="form-control" id="searchInput" aria-label="Text input with dropdown button">
-        <button class="btn btn-light" type="button"><i class="bi bi-search"></i></button>
+        <button class="btn btn-light" type="button" onclick=searchBooks()><i class="bi bi-search"></i></button>
     </div>
      
     <ul class="list-group list-group-flush" id="results-list" data-bs-theme="light">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-        <li class="list-group-item">A fourth item</li>
-        <li class="list-group-item">And a fifth one</li>
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-        <li class="list-group-item">A fourth item</li>
-        <li class="list-group-item">And a fifth one</li>
-      </ul>
+    </ul>
 
 </body>
 <script src="script.js"></script>
