--- a/bookshelf.html
+++ b/bookshelf.html
@@ -23,7 +23,7 @@
     <!-- Load icon library -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <title>API Test</title>
+    <title>Bookshelf</title>
 </head>
 <body>
     <!-- Background image -->
@@ -39,7 +39,7 @@
         <div class="container-fluid justify-content-end">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <button class="nav-link" onclick="window.location.href='bookshelf.html'">Book Shelf</button>
+                    <button class="nav-link" onclick="window.location.href='homepage.html'">Home</button>
                 </li>
                 <li class="nav-item">
                     <button class="nav-link">Recommended</button>
@@ -51,21 +51,11 @@
         </div>
     </nav>
 
-    <div class="input-group mb-3 shadow" data-bs-theme="light" id="search-form">
-        <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" id="search-select" aria-expanded="false"><i class="bi bi-list"></i></button>
-        <ul class="dropdown-menu">
-            <li><button class="dropdown-item" onclick="searchSelect(this)">Title</button></li>
-            <li><button class="dropdown-item" onclick="searchSelect(this)">Author</button></li>
-            <li><button class="dropdown-item" onclick="searchSelect(this)">Genre</button></li>
-            <li><button class="dropdown-item" onclick="searchSelect(this)">ISBN</button></li>
-            <li><button class="dropdown-item" onclick="searchSelect(this)">Publisher</button></li>
-        </ul>
-        <input type="text" class="form-control" id="searchInput" aria-label="Text input with dropdown button">
-        <button class="btn btn-light" type="button" onclick="searchBooks()"><i class="bi bi-search"></i></button>
-    </div>
-
-    <div id="search-results"></div>
+    <div id="result" class="container mt-5"></div>
 
 </body>
 <script src="script.js"></script>
+<script>
+    document.addEventListener('DOMContentLoaded', viewBookshelf);
+</script>
 </html>
