--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </nav>
     <div class="container-xxl" id="welcome">
-        <span>BookKeeper <i class="bi bi-book-fill"></i></span>
+        <span>BookKeeper</span>
         <br>
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#login-modal">Login</button>
         <br>
