Remove book, disable added, brand link modified

--- a/homepage.html
+++ b/homepage.html
@@ -35,7 +35,7 @@
     <!-- A grey horizontal navbar that becomes vertical on small screens -->
     <nav class="navbar navbar-expand-sm fixed-top mask-custom">
         <div class="container-fluid">
-            <a class="navbar-brand" href='index.html'>BookKeeper</a>
+            <a class="navbar-brand" href='homepage.html'>BookKeeper</a>
         </div>
 
         <!-- Links -->
