--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-book-fill" viewBox="0 0 16 16">
-        <path d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783"/>
-      </svg>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+   
+    <!-- Load icon library -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>API Test</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
         </div>
     </nav>
     <div class="container-xxl" id="welcome">
-        <span>BookKeeper</span>
+        <span>BookKeeper <i class="bi bi-book-fill"></i></span>
         <br>
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#login-modal">Login</button>
         <br>
@@ -35,11 +35,11 @@
                     <button type="button" class="btn-close" id="login-close" data-bs-dismiss="modal"></button>
                     <h3>Login</h3>
                     <div class="form-floating mb-3 mt-3" data-bs-theme="light">
-                        <input type="text" class="form-control" id="login-username" placeholder="Enter email" name="email">
+                        <input type="text" class="form-control" id="login-username" placeholder="Enter email" name="email" required>
                         <label for="email">Email</label>
                     </div>
                     <div class="form-floating mt-3 mb-3" data-bs-theme="light">
-                        <input type="password" class="form-control" id="login-password" placeholder="Enter password" name="pswd">
+                        <input type="password" class="form-control" id="login-password" placeholder="Enter password" name="pswd" required>
                         <label for="pwd">Password</label>
                     </div> 
                     <button type="button" onclick="handleLogin()" class="btn" id="login-login">Login</button>
@@ -54,11 +54,11 @@
                     <button type="button" class="btn-close" id="login-close" data-bs-dismiss="modal"></button>
                     <h4>Sign Up</h4>
                     <div class="form-floating mb-3 mt-3" data-bs-theme="light">
-                        <input type="text" class="form-control" id="reg-username" placeholder="Enter email" name="email">
+                        <input type="text" class="form-control" id="reg-username" placeholder="Enter email" name="email" required>
                         <label for="email">Email</label>
                     </div>
                     <div class="form-floating mt-3 mb-3" data-bs-theme="light">
-                        <input type="password" class="form-control" id="reg-password" placeholder="Enter password" name="pswd">
+                        <input type="password" class="form-control" id="reg-password" placeholder="Enter password" name="pswd" required>
                         <label for="pwd">Password</label>
                     </div> 
                     <button type="button" onclick="handleRegister()" class="btn" id="signup-signup" data-bs-dismiss="modal">Sign Up</button>
