--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <title>API Test</title>
 </head>
 <body>
-    <div class="bg-image"></div>
     <nav class="navbar navbar-expand-sm fixed-top mask-custom">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">BookKeeper</a>
@@ -65,6 +64,39 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div id="carousel-container" class="container-fluid">
+        <div id="index-carousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="book_car_signup.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block mask-custom">
+                  <h5>Create Your Account</h5>
+                  <p>Creating your account has never been easier.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="book_car_login.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block mask-custom">
+                  <h5>Logging In</h5>
+                  <p>Logging in lets you access and save search results.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="book_car_search.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block mask-custom">
+                  <h5>Find New Books</h5>
+                  <p>Search for some new books by several of our identifiers.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="book_car_bookshelf.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block mask-custom">
+                  <h5>Save Your Favorites</h5>
+                  <p>Save your favorites whenever you want and view them on your bookshelf.</p>
+                </div>
+              </div>
+            </div>
     </div>
 </body>
 <script src="script.js"></script>
