--- a/homepage.html
+++ b/homepage.html
@@ -67,6 +67,7 @@
         <button class="btn btn-light" type="button" id="searchButton" onclick="searchBooks()"><i class="bi bi-search"></i></button>
     </div>
 
+    <div id="recommendations"></div>
     <div id="search-results"></div>
     
     <!-- Modal for displaying book details -->
