--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    
     <!-- Load icon library -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <title>API Test</title>
+    <title>BookKeeper</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm fixed-top mask-custom">
